Update links and styles in 404 page, sidebar, home layout, pages layout, and posts layout

--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@ permalink: /
     .postDIV {
         background-color: white;
         margin-top: 20px;
-        margin-left: -20px;
-        padding: 15px 20px 3px 20px;       
+        /* margin-left: -20px; */
+        padding: 15px 20px 3px 20px;
     }
 </style>
