--- a/pages/各校資管系所.html
+++ b/pages/各校資管系所.html
@@ -3,8 +3,9 @@ layout: pages
 title: "各校資管系所"
 permalink: /mis
 ---
-
-<table id="myTable" class="stripe " style="width: 100%;"></table>
+<div class="overflow">
+    <table id="myTable" class="stripe " style="width: 100%;"></table>
+</div>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
 <script>
