Fix formatting issues in pages.html and add margin to col-lg-3 col-md-4 div

--- a/pages/關於學會/學會組織.html
+++ b/pages/關於學會/學會組織.html
@@ -21,7 +21,7 @@ permalink: /about/學會組織
         </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-4">
+    <div class="col-lg-3 col-md-4" style="margin-bottom: 20px;">
       <div class="card" style="width: 100%;">
         <img src="/assets/img/Cheng-Che-Pin.jpg" class="card-img-top" alt="...">
         <div class="card-header">
